--- a/home.html
+++ b/home.html
@@ -111,9 +111,9 @@ webamp.renderWhenReady(document.getElementById('winamp-container'));
     <center>
       <h2 style="font-family:courier"> 
         <a href=index.html> HOME</a> ⊹
-        <a href=about.html> TEST</a> ⊹
-        <a href=blog.html> TWITTER</a> ⊹
-        <a href=links.html> CA HERE</a> 
+        <a href=https://x.com/CoinityTrial_> TEST</a> ⊹
+        <a href=https://x.com/CoinityTrial_> TWITTER</a> ⊹
+        <a href=https://x.com/CoinityTrial_> CA HERE</a> 
       </h2> 
     </center>
   
